--- a/css/site.css
+++ b/css/site.css
@@ -61,10 +61,37 @@ html {
 body {
   /* Margin bottom by footer height */
   margin-bottom: 60px;
+  background-color: #f5f5f5;
 }
 .footer {
   position: absolute;
   bottom: 0;
   width: 100%;
   white-space: nowrap;
+  background-color: #fff;
+}
+
+h1, h2, h3, h4, h5, h6, .h1, .h2, .h3, .h4, .h5, .h6 {
+  font-family: 'Crimson Text', serif;
+}
+
+.gradient-colour-primary {
+  background-image: linear-gradient(45deg, #55198b, #34a264)
+}
+
+.navbar-brand {
+  width: 100%;
+}
+
+@font-face {
+  font-family: Brotherpoll;
+  src: url('../fonts/Brotherpoll-Italic.otf');
+}
+
+.signature {
+  font-family: Brotherpoll;
+}
+
+.font-size-2x {
+  font-size: 2em;
 }
